fix menubar spacing
Former-commit-id: b3b7bdefa3143755efbf5fc05d27de023b031403

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,8 +1,8 @@
 :root {
-  --menuBarSize: 40px;
+  --menuBarSize: 20px;
 
-  &.is-windows {
-    --menuBarSize: 20px;
+  &.is-mac:not(.is-menubar) {
+    --menuBarSize: 40px;
 ***REMOVED***
 }
 
